// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Component Rendering Should render something if it receives required props 1`] = `
<ul
  className="menu vertical"
>
  <li
    className=""
    id="mnu-alpha"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <i
        aria-hidden="true"
        className="alarm icon"
      />
      Alpha
    </a>
  </li>
  <li
    className="parentLevel"
    id="mnu-beta"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <i
        aria-hidden="true"
        className="bath icon"
      />
      Beta
      <i
        aria-hidden="true"
        className="icon chevron down expander"
      />
    </a>
    <ul
      className="submenu"
    >
      <li
        className=""
        id="mnu-gama"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          Gama
        </a>
      </li>
      <li
        className=""
        id="mnu-zeta"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          Zeta
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Navigation Multilevel Rendering Should have a submenu 1`] = `
<li
  className="parentLevel"
  id="mnu-beta"
  onClick={[Function]}
>
  <Link
    onlyActiveOnIndex={false}
    style={Object {}}
  >
    <Icon
      as="i"
      name="bath"
    />
    Beta
    <Icon
      as="i"
      className="chevron down expander"
    />
  </Link>
  <ul
    className="submenu"
  >
    <li
      className=""
      id="mnu-gama"
      onClick={[Function]}
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/gama"
      >
        Gama
      </Link>
    </li>
    <li
      className=""
      id="mnu-zeta"
      onClick={[Function]}
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/zeta"
      >
        Zeta
      </Link>
    </li>
  </ul>
</li>
`;
